--- a/dom-i-react-functional/index.html
+++ b/dom-i-react-functional/index.html
@@ -9,16 +9,49 @@
     .element-1 {
       color: green;
     }
+    .element-2 {
+      color: blue;
+    }
   </style>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root1"></div>
+  <div id="root2"></div>
+  <div id="root3"></div>
 </body>
 
 <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-<script type="text/javascript">
-  const MyElement = React.createElement('h1', { className: 'element-1' }, 'Hello this is element 1');
-  ReactDOM.render(MyElement, document.getElementById('root'));
+<script crossorigin src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+<script type="text/babel">
+  const HelloComponent = props => <h1>Hello from React Component Land!</h1>;
+
+  const NavLink = props => {
+    return (
+      <a href="#">{props.name}</a>
+    );
+  }
+
+  const MyButton = props => {
+    return (<button>Click this button</button>);
+  }
+
+  const MyInput = props => {
+    return (<input type="text" placeholder="I am an Input" />);
+  }
+
+  const App = props => {
+    return (
+      <div>
+        <NavLink name="Nav1" />
+        <NavLink name="Nav2" />
+        <NavLink name="Nav3" />
+        <HelloComponent />
+        <MyButton />
+        <MyInput />
+      </div>
+    );
+  };
+  ReactDOM.render(<App />, document.getElementById('root1'));
 </script>
 </html>
